# RapidServer

./: .gitignore  meson.build
app/: main.cpp
src/rapid/: curry.hpp  file.cpp  file.hpp  fwd_capture.hpp  impl.hpp  sockets.hpp  sqliteUtils.hpp  traits.hpp  user.hpp  utils.cpp  utils.hpp
subprojects/: sqlite_orm.wrap  uWebSocketsMeson.wrap
